# Algorythms_Tests

./: CMakeLists.txt  README.md  main.cpp  test.cpp
data/: input_double.txt  input_graph.txt  mst_summary.txt  output_graph_history.txt  tsp_summary.txt
graphBenchmarkData/: graph_v1000_d25_id0.txt  graph_v1000_d25_id1.txt  graph_v1000_d25_id11.txt  graph_v1000_d25_id12.txt  graph_v1000_d25_id14.txt  graph_v1000_d25_id17.txt  graph_v1000_d25_id18.txt  graph_v1000_d25_id21.txt  graph_v1000_d25_id24.txt  graph_v1000_d25_id25.txt  graph_v1000_d25_id26.txt  graph_v1000_d25_id27.txt  graph_v1000_d25_id28.txt  graph_v1000_d25_id29.txt  graph_v1000_d25_id31.txt  graph_v1000_d25_id33.txt  graph_v1000_d25_id34.txt  graph_v1000_d25_id36.txt  graph_v1000_d25_id39.txt  graph_v1000_d25_id46.txt  graph_v1000_d25_id47.txt  graph_v1000_d25_id48.txt  graph_v1000_d25_id49.txt  graph_v1000_d25_id5.txt  graph_v1000_d25_id7.txt  graph_v1000_d25_id8.txt  graph_v1000_d50_id11.txt  graph_v1000_d50_id12.txt  graph_v1000_d50_id14.txt  graph_v1000_d50_id15.txt  graph_v1000_d50_id18.txt  graph_v1000_d50_id2.txt  graph_v1000_d50_id20.txt  graph_v1000_d50_id21.txt  graph_v1000_d50_id22.txt  graph_v1000_d50_id23.txt  graph_v1000_d50_id24.txt  graph_v1000_d50_id25.txt  graph_v1000_d50_id26.txt  graph_v1000_d50_id27.txt  (+498 more)
graphBenchmarkData/v1000_25/: graph_v1000_d25_id10.txt  graph_v1000_d25_id13.txt  graph_v1000_d25_id15.txt  graph_v1000_d25_id16.txt  graph_v1000_d25_id19.txt  graph_v1000_d25_id2.txt  graph_v1000_d25_id20.txt  graph_v1000_d25_id22.txt  graph_v1000_d25_id23.txt  graph_v1000_d25_id3.txt  graph_v1000_d25_id30.txt  graph_v1000_d25_id32.txt  graph_v1000_d25_id35.txt  graph_v1000_d25_id37.txt  graph_v1000_d25_id38.txt  graph_v1000_d25_id4.txt  graph_v1000_d25_id40.txt  graph_v1000_d25_id41.txt  graph_v1000_d25_id42.txt  graph_v1000_d25_id43.txt  graph_v1000_d25_id44.txt  graph_v1000_d25_id45.txt  graph_v1000_d25_id6.txt  graph_v1000_d25_id9.txt
graphBenchmarkData/v1000_50/: graph_v1000_d50_id0.txt  graph_v1000_d50_id1.txt  graph_v1000_d50_id10.txt  graph_v1000_d50_id13.txt  graph_v1000_d50_id16.txt  graph_v1000_d50_id17.txt  graph_v1000_d50_id19.txt  graph_v1000_d50_id31.txt  graph_v1000_d50_id32.txt  graph_v1000_d50_id35.txt  graph_v1000_d50_id36.txt  graph_v1000_d50_id37.txt  graph_v1000_d50_id41.txt  graph_v1000_d50_id44.txt  graph_v1000_d50_id48.txt  graph_v1000_d50_id5.txt  graph_v1000_d50_id8.txt
graphBenchmarkData/v100_25/: graph_v100_d25_id0.txt  graph_v100_d25_id1.txt  graph_v100_d25_id12.txt  graph_v100_d25_id14.txt  graph_v100_d25_id15.txt  graph_v100_d25_id18.txt  graph_v100_d25_id19.txt  graph_v100_d25_id22.txt  graph_v100_d25_id29.txt  graph_v100_d25_id3.txt  graph_v100_d25_id33.txt  graph_v100_d25_id34.txt  graph_v100_d25_id37.txt  graph_v100_d25_id38.txt  graph_v100_d25_id39.txt  graph_v100_d25_id40.txt  graph_v100_d25_id41.txt  graph_v100_d25_id42.txt  graph_v100_d25_id44.txt  graph_v100_d25_id5.txt  graph_v100_d25_id7.txt
graphBenchmarkData/v100_50/: graph_v100_d50_id0.txt  graph_v100_d50_id12.txt  graph_v100_d50_id13.txt  graph_v100_d50_id19.txt  graph_v100_d50_id2.txt  graph_v100_d50_id22.txt  graph_v100_d50_id3.txt  graph_v100_d50_id31.txt  graph_v100_d50_id36.txt  graph_v100_d50_id38.txt  graph_v100_d50_id39.txt  graph_v100_d50_id4.txt  graph_v100_d50_id40.txt  graph_v100_d50_id42.txt  graph_v100_d50_id43.txt  graph_v100_d50_id44.txt  graph_v100_d50_id45.txt  graph_v100_d50_id46.txt  graph_v100_d50_id48.txt  graph_v100_d50_id49.txt  graph_v100_d50_id6.txt  graph_v100_d50_id7.txt
graphBenchmarkData/v100_99/: graph_v100_d99_id10.txt  graph_v100_d99_id11.txt  (+19 more)
(+390 files in other folders)
